# dronefly

./: .bandit  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CONTRIBUTORS.md  LICENSE  Pipfile  README.md  ROADMAP.md  contributing.md  info.json  pyproject.toml  qgriff.py  requirements-dev.txt  requirements.txt  setup.py  t(map(get_taxon_fields, records)))  test.json
.github/workflows/: tests-dev.yml  tests.yml
cogs/ebirdcog/: __init__.py  ebirdcog.py  info.json
docs/: conf.py  design_goals.rst  development_plan.rst  dronefly.rst  dronefly_bot.rst  ebirdcog.rst  guide_for_participants.rst  inatcog.commands.rst  index.rst  modules.rst  requirements.txt
docs/_static/: README.txt
docs/source/: ebirdcog.rst  inatcog.commands.rst  inatcog.rst  inatcog.tests.rst  modules.rst
docs/source/ebirdcog/: modules.rst
docs/source/inatcog/: inatcog.rst  modules.rst
ebirdcog/: __init__.py  api.py  ebirdcog.py  info.json
inat/: __init__.py  base_classes.py  inat.py  inatcog.py  info.json  projects.py  query.py  taxa.py  taxon_query.py  users.py  utils.py
inat/commands/: inat.py  obs.py  place.py  project.py  search.py  taxon.py
inat/core/apis/: inat.py
inat/core/formatters/: generic.py
inat/core/parsers/: constants.py  natural.py
inat/core/query/: query.py
inat/core/tests/: inat_api_test.py  natural_parser_test.py  unixlike_parser_test.py
inat/embeds/: common.py  inat.py
inat/tests/: test_cog.py
inatcog/: __init__.py  api.py  api_classes.py  base_classes.py  checks.py  client.py  common.py  config.py  constants.py  controlled_terms.py  converters.py  embeds.py  help.py  inat_embeds.py  inatcog.py  info.json  interfaces.py  last.py  listeners.py  maps.py  menus.py  obs.py  obs_classes.py  obs_query.py  parsers.py  photos.py  places.py  predicates.py  projects.py  query.py  search.py  sounds.py  taxa.py  taxon_classes.py  taxon_query.py  test_api.py  users.py  utils.py
inatcog/commands/: event.py  inat.py  last.py  map.py  obs.py  place.py  project.py  search.py  taxon.py  user.py
inatcog/converters/: base.py  reply.py
inatcog/core/models/: taxon.py
inatcog/core/parsers/: constants.py  natural.py  unixlike.py  url.py
inatcog/core/query/: query.py
inatcog/core/tests/: natural_parser_test.py  query_test.py  taxon_test.py  unixlike_parser.py  unixlike_parser_test.py
inatcog/embeds/: common.py  inat.py  inat_embeds.py
inatcog/menus/: generic.py  inat.py
inatcog/tests/: test_api.py  test_embeds.py  test_maps.py  test_users.py
qgriff/: __init__.py  qgriff.py
