[tool.bandit]
exclude_dirs = ["tests"]

[tool.flake8]
max-line-length = 100

[tool.poetry]
name = "dronefly"
version = "0.1.6"
description = "Chat platform software for naturalist-related sites"
authors = ["Ben Armstrong <synrg@debian.org>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Red-DiscordBot = "^3.5.16"
dronefly-core = "=0.4.2"
dronefly-discord = "=0.1.9"

ebird-api = "^3.0.6"
filelock = "^3.13.3"
timeago = "^1.0.15"
aiolimiter = "^1.0.0"
aiohttp-retry = "^2.4.5"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pylint = "^2.10.2"
pytest-asyncio = "^0.20.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.1.1"
sphinx-material = "^0.0.36"
sphinxcontrib_trio = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
